<resources>
    <string name="app_name">TradersApp</string>
    <string name="prefs_file">com.carlosbogdan.tradersapp.PREFERENCE_FILE_KEY</string>
    <string name="email_title">Email</string>
    <string name="email"></string>
    <string name="username_title">Username</string>
    <string name="username"></string>
    <string name="coin_converter_title">Coin converter</string>
    <string name="coin_converter"></string>
    <string name="password_title">Password</string>
    <string name="password">********</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
