<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="177dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImage"
                android:layout_width="81dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_usericon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_profile2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username_title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/username_txt"
                            android:layout_width="284dp"
                            android:layout_height="match_parent"
                            android:text="@string/username"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/edit_username"
                            android:layout_width="35dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_edit" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_email" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/email_txt"
                            android:layout_width="284dp"
                            android:layout_height="match_parent"
                            android:text="@string/email"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/edit_email"
                            android:layout_width="35dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_edit" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password_title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:textSize="16sp"
                            android:layout_width="284dp"
                            android:layout_height="match_parent"
                            android:text="@string/password" />

                        <ImageView
                            android:id="@+id/edit_password"
                            android:layout_width="35dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_edit" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_coin_converter" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/coin_converter_title" />

                    <TextView
                        android:id="@+id/txt_coinConverter"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/coin_converter" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="133dp" />

            <Button
                android:id="@+id/logOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn_bg"
                android:text="Log out"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/cardView2"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:layout_constraintStart_toStartOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        </LinearLayout>

    </LinearLayout>
</layout>